--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,12 @@ bind-key j    select-pane -D
 bind-key k    select-pane -U
 bind-key l    select-pane -R
 
-set-option -g mouse-select-pane on
+set -g default-terminal "screen-256color"
+
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
 setw -g monitor-activity on
 
 set-option -g set-titles on
@@ -28,7 +33,7 @@ set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
 
-set -g status-left '#[fg=colour235,bg=colour252,bold] #S #[fg=colour252,bg=colour234,nobold]⮀'
+set -g status-left '#[fg=colour235,bg=colour252,bold] #S '
 set -g window-status-format "#[fg=white,bg=colour234] #I. #W "
-set -g window-status-current-format "#[fg=colour234,bg=green]⮀#[fg=colour234,bg=green,noreverse,bold] #I. #W #[fg=green,bg=colour234,nobold]⮀"
-set -g status-right '#[fg=red,bold]#(whoami)#[fg=white,bold] at #[fg=yellow,bold]#H'
+set -g window-status-current-format "#[fg=colour234,bg=green,noreverse,bold] #I. #W "
+set -g status-right '#[fg=magenta,bold]#(tnext.sh)#[default]/#[fg=magenta,dim]#(ttotal.sh)#[default]✓  #[fg=red,bold]#(whoami)#[default] at #[fg=yellow,bold]#H'
