Random fixes/changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,14 +2,14 @@ set-option -g prefix C-z
 unbind-key C-b
 bind-key z send-prefix
 
-bind-key v    split-window -v
-bind-key s    split-window -h
+bind-key v    split-window -h
+bind-key s    split-window -v
 bind-key h    select-pane -L
 bind-key j    select-pane -D
 bind-key k    select-pane -U
 bind-key l    select-pane -R
 
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
