Get rid of todo.sh

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,4 +36,4 @@ set -g message-attr bold
 set -g status-left '#[fg=colour235,bg=colour252,bold] #S '
 set -g window-status-format "#[fg=white,bg=colour234] #I. #W "
 set -g window-status-current-format "#[fg=colour234,bg=green,noreverse,bold] #I. #W "
-set -g status-right '#[fg=magenta,bold]#(tnext.sh)#[default]/#[fg=magenta,dim]#(ttotal.sh)#[default]✓  #[fg=red,bold]#(whoami)#[default] at #[fg=yellow,bold]#H'
+set -g status-right '#[fg=red,bold]#(whoami)#[default] at #[fg=yellow,bold]#H'
