--- a/.gitmodules
+++ b/.gitmodules
@@ -16,9 +16,9 @@
 [submodule "vim/bundle/tslime"]
 	path = vim/bundle/tslime
 	url = https://github.com/jgdavey/tslime.vim.git
-[submodule "vim/bundle/vim-ruby.git"]
-	path = vim/bundle/vim-ruby.git
+[submodule "vim/bundle/vim-ruby"]
+	path = vim/bundle/vim-ruby
 	url = https://github.com/vim-ruby/vim-ruby.git
-[submodule "vim/bundle/vim-markdown.git"]
-	path = vim/bundle/vim-markdown.git
+[submodule "vim/bundle/vim-markdown"]
+	path = vim/bundle/vim-markdown
 	url = https://github.com/tpope/vim-markdown.git
