--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,8 @@ bind-key j    select-pane -D
 bind-key k    select-pane -U
 bind-key l    select-pane -R
 
+bind-key `    setw -t ':%%' allow-rename
+
 #set -g default-terminal "screen-256color"
 
 set -g mouse-select-pane on
