--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ bind-key l    select-pane -R
 
 bind-key `    setw allow-rename
 
-#set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
