--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,7 @@ set -g mouse-select-window on
 setw -g monitor-activity on
 
 set-option -g set-titles on
-set-option -g set-titles-string '[#S] #I. #W'
+set-option -g set-titles-string "[#S-#I] #(whoami)@#H #W"
 
 set -g base-index 1
 set -s escape-time 0
