--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,9 @@ bind-key C-z send-prefix
 
 bind-key z resize-pane -Z
 
-bind-key v    split-window -h
-bind-key s    split-window -v
+bind-key c    new-window -c "#{pane_current_path}"
+bind-key v    split-window -h -c "#{pane_current_path}"
+bind-key s    split-window -v -c "#{pane_current_path}"
 bind-key h    select-pane -L
 bind-key j    select-pane -D
 bind-key k    select-pane -U
