Adds lastgenre and web plugins for beets

--- a/beets/.config/beets/config.yaml
+++ b/beets/.config/beets/config.yaml
@@ -1,6 +1,8 @@
 directory: /mnt/media/Audio/Music
-plugins: chroma fromfilename fetchart discogs
+plugins: chroma fromfilename fetchart discogs lastgenre web
 import:
   move: yes
   quiet_fallback: skip
   log: ~/.cache/beets/import.log
+lastgenre:
+  canonical: ''
