Switch to using C-Space for prefix in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
-set-option -g prefix C-z
 unbind-key C-b
-bind-key C-z send-prefix
+set-option -g prefix C-Space
+bind-key Space send-prefix
 
 bind-key z resize-pane -Z
 
@@ -17,9 +17,10 @@ bind-key `    setw allow-rename
 set -g mode-keys vi
 
 unbind [
-bind-key Escape copy-mode
 unbind c-p
 bind-key c-p paste-buffer
+bind-key Space copy-mode
+bind-key C-Space copy-mode
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
