--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,17 +22,18 @@ set -g mode-keys vi
 
 unbind [
 unbind c-p
-bind-key c-p paste-buffer
 bind-key Space copy-mode
 bind-key C-Space copy-mode
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+bind-key c-p paste-buffer
 
 set -g default-terminal "screen-256color"
 
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
+setw -g mode-mouse copy-mode
 
 setw -g monitor-activity on
 
