tmux keybinding to send C-k

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,7 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 bind-key C-l send-keys C-l
+bind-key C-k send-keys C-k
 
 bind-key `    setw allow-rename
 
@@ -45,7 +46,7 @@ set -g pane-base-index 1
 set -s escape-time 0
 setw -g aggressive-resize on
 
-set -g pane-border-fg colour16
+set -g pane-border-fg colour235
 set -g pane-active-border-fg green
 set -g message-fg colour16
 set -g message-bg colour221
