[tmux] Improvements to copy/paste

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,24 +17,26 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind-key C-l send-keys C-l
 bind-key C-k send-keys C-k
 
-bind-key `    setw allow-rename
+bind-key ` setw allow-rename
 
 set -g mode-keys vi
 
-unbind [
-unbind c-p
+# Copy Mode
+unbind-key [
 bind-key Space copy-mode
 bind-key C-Space copy-mode
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key c-p paste-buffer
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy V rectangle-toggle
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
 
 set -g default-terminal "screen-256color"
+set -g default-command "reattach-to-user-namespace -l bash"
 
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
-setw -g mode-mouse copy-mode
+setw -g mode-mouse on
 
 setw -g monitor-activity on
 
