--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,9 +29,14 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy V rectangle-toggle
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
+if-shell 'test "$(uname -s)" = Darwin' \
+  'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"; \
+   bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
+
+if-shell 'test "$(uname -s)" = Linux' \
+  'bind-key -t vi-copy y copy-pipe "xsel -b -i"'
 
 set -g default-terminal "screen-256color"
-set -g default-command "reattach-to-user-namespace -l bash"
 
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
