[tmux] Bind 'p' to paste the current tmux buffer

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,8 @@ unbind-key C-b
 set-option -g prefix C-Space
 bind-key Space send-prefix
 
+set -g mode-keys vi
+
 bind-key z resize-pane -Z
 
 bind-key c    new-window -c "#{pane_current_path}"
@@ -19,15 +21,14 @@ bind-key C-k send-keys C-k
 
 bind-key ` setw allow-rename
 
-set -g mode-keys vi
-
 # Copy Mode
 unbind-key [
+unbind-key ]
 bind-key Space copy-mode
 bind-key C-Space copy-mode
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy V rectangle-toggle
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key p paste-buffer
 
 if-shell 'test "$(uname -s)" = Darwin' \
   'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"; \
