--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,10 +32,12 @@ bind-key p paste-buffer
 
 if-shell 'test "$(uname -s)" = Darwin' \
   'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"; \
-   bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
+   bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" \
+   bind-key C-p run-shell "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"'
 
 if-shell 'test "$(uname -s)" = Linux' \
-  'bind-key -t vi-copy y copy-pipe "xsel -b -i"'
+  'bind-key -t vi-copy y copy-pipe "xsel -b -i"; \
+   bind-key C-p run-shell "tmux set-buffer \"$(xsel -b -o)\"; tmux paste-buffer"'
 
 set -g default-terminal "screen-256color"
 
