--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,11 +28,11 @@ bind-key Space copy-mode
 bind-key C-Space copy-mode
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy V rectangle-toggle
-bind-key p paste-buffer
+#bind-key p paste-buffer
 
 if-shell 'test "$(uname -s)" = Darwin' \
-  'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"; \
-   bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" \
+  'set-option -g default-command "exec reattach-to-user-namespace -l zsh"; \
+   bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"; \
    bind-key C-p run-shell "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"'
 
 if-shell 'test "$(uname -s)" = Linux' \
