Enables tmux plugin manager and tmux resurrect plugin

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -84,3 +84,11 @@ set -g window-status-current-format " #I. #W "
 # http://www.mail-archive.com/tmux-users@lists.sourceforge.net/msg01922.html
 # and http://permalink.gmane.org/gmane.comp.terminal-emulators.tmux.user/2347
 set -g terminal-overrides "rxvt-unicode*:sitm@,ritm@"
+
+## Tmux Plugin Manager
+
+set -g @tpm_plugins "              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-resurrect      \
+"
+run-shell ~/.tmux/plugins/tpm/tpm
