--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,20 +1,22 @@
 [core]
-  pager = less -FX
-  excludesfile = /home/mark/.gitignore
+	pager = less -FX
+	excludesfile = /home/mark/.gitignore
 [user]
-  name = Mark A. Nicolosi
-  email = mark.a.nicolosi@gmail.com
+	name = Mark A. Nicolosi
+	email = mark.a.nicolosi@gmail.com
 [color]
-  pager = true
-  branch = auto
-  diff = auto
-  status = auto
-  ui = auto
+	pager = true
+	branch = auto
+	diff = auto
+	status = auto
+	ui = auto
 [alias]
-  staged = diff --staged
-  co = checkout
-  count-commits = !git log --pretty=oneline | wc -l
-  lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr by %an)%Creset' --abbrev-commit --date=relative
-  br = branch
+	staged = diff --staged
+	co = checkout
+	count-commits = !git log --pretty=oneline | wc -l
+	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr by %an)%Creset' --abbrev-commit --date=relative
+	br = branch
 [push]
-  default = simple
+	default = simple
+[pull]
+	rebase = true
