--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,6 +46,8 @@ set -g mouse-resize-pane on
 set -g mouse-select-window on
 setw -g mode-mouse on
 
+set -g focus-events on
+
 setw -g monitor-activity on
 
 set-option -g set-titles on
