--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,7 +59,7 @@ set -s escape-time 0
 setw -g aggressive-resize on
 
 set -g pane-border-fg colour235
-set -g pane-active-border-fg green
+set -g pane-active-border-fg blue
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
@@ -69,7 +69,9 @@ set -g status-bg colour234
 set -g status-left '#[fg=colour235,bg=colour252,bold] #S '
 set -g status-right '#[fg=colour252,bold] #H '
 
-set -g window-status-activity-attr bold
+setw -g window-status-activity-attr bold
+setw -g window-status-activity-fg colour234
+setw -g window-status-activity-bg yellow
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour234
@@ -77,7 +79,7 @@ setw -g window-status-bell-bg red
 
 set -g window-status-current-attr bold
 set -g window-status-current-fg colour234
-set -g window-status-current-bg green
+set -g window-status-current-bg blue
 
 set -g window-status-format " #I. #W "
 set -g window-status-current-format " #I. #W "
