--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,7 +48,8 @@ set -g mouse-resize-pane on
 set -g mouse-select-window on
 setw -g mode-mouse on
 
-set -g focus-events on
+if-shell 'test ! $(echo $TMUX | grep tmate)' \
+  'set -g focus-events on'
 
 setw -g monitor-activity on
 
