[tmux] Tmux 2.1 stuff

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,7 +21,7 @@ bind-key C-k send-keys C-k
 
 bind-key ` setw allow-rename
 
-set-option -g history-limit 5000
+set-option -g history-limit 20000
 
 # Copy Mode
 unbind-key [
@@ -43,10 +43,16 @@ if-shell 'test "$(uname -s)" = Linux' \
 
 set -g default-terminal "screen-256color"
 
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-setw -g mode-mouse on
+bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
+bind-key -t vi-copy PPage page-up
+bind-key -t vi-copy NPage page-down
+
+set -g mouse on
+
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind-key -t vi-copy WheelUpPane scroll-up
+bind-key -t vi-copy WheelDownPane scroll-down
 
 if-shell 'test ! $(echo $TMUX | grep tmate)' \
   'set -g focus-events on'
@@ -86,6 +92,9 @@ set -g window-status-current-bg blue
 
 set -g window-status-format " #I. #W "
 set -g window-status-current-format " #I. #W "
+
+setw -g window-style 'bg=#181818'
+setw -g window-active-style 'bg=black'
 
 # Prevent tmux from displaying standout attr as italics. See
 # http://www.mail-archive.com/tmux-users@lists.sourceforge.net/msg01922.html
