[tmate] Easy kill session keybinding

--- a/tmate/.tmate.conf
+++ b/tmate/.tmate.conf
@@ -5,6 +5,7 @@ bind-key ] send-prefix
 # Use: C-b C-b to change to last window
 #bind-key C-b last-window
 bind-key C-] last-window
+bind-key C-q kill-session
 
 #####
 set-window-option -g window-status-current-bg red
