[tmux] Dedicated tmux config for things that tmate hates

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,19 +43,8 @@ if-shell 'test "$(uname -s)" = Linux' \
 
 set -g default-terminal "screen-256color"
 
-bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
-bind-key -t vi-copy PPage page-up
-bind-key -t vi-copy NPage page-down
-
-set -g mouse on
-
-bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-bind-key -t vi-copy WheelUpPane scroll-up
-bind-key -t vi-copy WheelDownPane scroll-down
-
 if-shell 'test ! $(echo $TMUX | grep tmate)' \
-  'set -g focus-events on'
+  'source-file ~/.tmux.d/tmux-only.conf'
 
 setw -g monitor-activity on
 
@@ -92,9 +81,6 @@ set -g window-status-current-bg blue
 
 set -g window-status-format " #I. #W "
 set -g window-status-current-format " #I. #W "
-
-setw -g window-style 'bg=#181818'
-setw -g window-active-style 'bg=black'
 
 # Prevent tmux from displaying standout attr as italics. See
 # http://www.mail-archive.com/tmux-users@lists.sourceforge.net/msg01922.html
