Unbind default pane split keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,8 @@ bind-key z resize-pane -Z
 bind-key c    new-window -c "#{pane_current_path}"
 bind-key v    split-window -h -c "#{pane_current_path}"
 bind-key s    split-window -v -c "#{pane_current_path}"
+unbind-key %
+unbind-key '"'
 
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)n?vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
