--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,7 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind-key C-l send-keys C-l
 bind-key C-k send-keys C-k
 
-bind-key ` setw allow-rename
+bind-key ` setw allow-rename off
 
 set-option -g history-limit 20000
 
