--- a/tmate/.tmate.conf
+++ b/tmate/.tmate.conf
@@ -17,13 +17,12 @@ set -g history-limit 10000
 setw -g monitor-activity on
 set -g visual-activity on
 bind z resize-pane -Z
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status off
 set -g set-titles-string "tmate.#I.#w"
 set -g renumber-windows on
-
+#
 unbind -n C-h
 unbind -n C-j
 unbind -n C-k
 unbind -n C-l
-unbind -n C-\
