Commit all the things I've been putting off for some reason

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,8 @@ bind-key C-k send-keys C-k
 
 bind-key ` setw allow-rename off
 
+bind-key = select-layout even-horizontal
+
 set-option -g history-limit 20000
 
 # Copy Mode
