--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,10 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # Fonts
-font_family  Cascadia Mono
+font_family      Cascadia Mono SemiLight
+bold_font        Cascadia Mono Bold
+italic_font      Cascadia Mono Italic
+bold_italic_font Cascadia Mono Bold Italic
 font_size    16.0
 
 # Tab bar
@@ -10,17 +13,16 @@ tab_separator             ""
 tab_title_template        "{fmt.fg._abb2bf}{fmt.bg.default} {index}. {title} "
 active_tab_title_template "{fmt.fg._282c34}{fmt.bg._e5c07b} {index}. {title} "
 
-active_tab_foreground   #000
-active_tab_background   #73D216
-active_tab_font_style   normal
-inactive_tab_foreground #444
-inactive_tab_background #999
+active_tab_font_style   bold
 inactive_tab_font_style normal
 
 # Advanced
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
 shell_integration disabled
+
+# Misc
+enable_audio_bell yes
 
 # Window management
 
@@ -39,3 +41,5 @@ map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
 map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
 map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+
+include base16-tomorrow-night.conf
