--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,10 +1,14 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+# ctrl+shift+f5    Reload configuration
+# ctrl+shift+f     Move window forward
+# ctrl+shift+b     Move window backward
+
 # Fonts
-font_family      Cascadia Mono SemiLight
-bold_font        Cascadia Mono Bold
-italic_font      Cascadia Mono Italic
-bold_italic_font Cascadia Mono Bold Italic
+font_family      CaskaydiaMono Nerd Font Mono SemiLight
+bold_font        CaskaydiaMono Nerd Font Mono Bold
+italic_font      CaskaydiaMono Nerd Font Mono Italic
+bold_italic_font CaskaydiaMono Nerd Font Mono Bold Italic
 font_size    16.0
 
 # Tab bar
@@ -36,10 +40,17 @@ map cmd+enter       launch --cwd=current
 map kitty_mod+t     new_tab_with_cwd
 map cmd+t           new_tab_with_cwd
 
+## Resizing
+map ctrl+left resize_window narrower
+map ctrl+right resize_window wider
+map ctrl+up resize_window taller
+map ctrl+down resize_window shorter 3
+map ctrl+home resize_window reset
+
 # vim-kitty-navigator
-map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
-map ctrl+k kitten pass_keys.py neighboring_window top    ctrl+k
-map ctrl+h kitten pass_keys.py neighboring_window left   ctrl+h
-map ctrl+l kitten pass_keys.py neighboring_window right  ctrl+l
+map ctrl+j kitten pass_keys.py bottom ctrl+j
+map ctrl+k kitten pass_keys.py top    ctrl+k
+map ctrl+h kitten pass_keys.py left   ctrl+h
+map ctrl+l kitten pass_keys.py right  ctrl+l
 
 include base16-tomorrow-night.conf
